# ML-Flows

./: .dockerignore  .example.env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  prefect.yaml  pyproject.toml  tasks.py
data/: playbook_sample.json
deployments/: preproc.yaml  shrag.yaml
deployments/ecs/: 1_build_and_push_docker.sh  2_setup_infrastructure.sh  4_deploy_flow.sh  README.md  task-definition-updated.json
flows/: __init__.py  __main__.py  deploy.py  settings.py
flows/cli/: chroma.py  pubsub.py
flows/common/: __init__.py  types.py
flows/common/clients/: chroma.py  embeddings.py  llms.py  mongo.py  mongodb.py  pubsub.py  vector_stores.py
flows/common/helpers/: __init__.py  auto_download.py  s3.py
flows/examples/: hello_flow.py
flows/preproc/: __init__.py  __main__.py  convert.py  index.py  ocr.py
flows/shrag/: __init__.py  __main__.py  constants.py  helpers.py  playbook.py  qa.py
flows/shrag/schemas/: answers.py  dynamic.py  questions.py
scripts/: flow_ops.py  playbook_ops.py  results_ops.py  run_retriever.py  test_mongo_retriever.py  test_retriever.py  upload_results_to_mongo.py
scripts/deployments/ecs/: 1_build_and_push_docker.sh  2_setup_infrastructure.sh  3_prefect_pool.sh  4_deploy_flow.sh  README.md  ecs-pool-job-template.json  task-definition-updated.json
services/: marker.py  ocr.py  smolDocling.py
tests/: conftest.py  test_convert_docling_2_md.py  test_flows_init.py  test_index_document_file.py  test_playbook_question_library.py
tests/common/: test_types.py
tests/common/clients/: test_helpers.py  test_pubsub.py  test_s3.py  test_vector_stores.py  test_vector_stores_mongo_real.py
tests/common/helpers/: test_auto_download.py  test_helpers_init.py
tests/integration/: test_run_qa_playbook_integration.py
