[project]
name = "SHRAG"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jose Marcos RF", email = "jose.marcos.rf@gmail.com"},
]
dependencies = [
    "boto3>=1.37.1",
    "invoke>=2.2.0",
    "loguru>=0.7.3",
    "llama-index>=0.12.20",
    "llama-index-embeddings-huggingface>=0.5.2",
    "llama-index-vector-stores-chroma>=0.4.1",
    "llama-index-postprocessor-flag-embedding-reranker>=0.3.0",
    "prefect>=3.2.7",
    "pymongo>=4.11.3",
    "pymupdf>=1.25.4",
    "redis>=5.2.1",
    "rich>=13.9.4",
    "tabulate>=0.9.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
openai = [
    "llama-index-llms-openai-like>=0.3.3",
    "openai>=1.69.0",
]
ollama = [
    "llama-index-llms-ollama>=0.5.2",
    "llama-index-embeddings-ollama>=0.5.0",
]
dev = [
    "isort>=6.0.0",
    "ruff>=0.9.7",
    "pre-commit>=4.1.0",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
flows = "python -m flows"

[tool.pdm.scripts.check-lint]
shell = """
    ruff format --check .
    isort --check .
    ruff check .
"""
help = "Run linting and formating checks."

[tool.pdm.scripts.reformat]
shell = """
    isort .
    ruff format .
"""
help = "Reformat the code using isort and ruff."

[tool.ruff]
line-length = 88
output-format = "grouped"


[tool.isort]
profile = "black"
line_length = 88
filter_files = true
force_alphabetical_sort_within_sections = true

