[project]
name = "SHRAG"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jose Marcos RF", email = "jose.marcos.rf@gmail.com"},
]
dependencies = [
    "boto3>=1.36.1",
    "invoke>=2.2.0",
    "loguru>=0.7.3",
    "llama-index>=0.12.37",
    "llama-index-vector-stores-mongodb>=0.4.1",
    "llama-index-postprocessor-flag-embedding-reranker>=0.3.0",
    "prefect>=3.2.7",
    "pymongo>=4.11.3",
    "pymupdf>=1.25.4",
    "redis>=5.2.1",
    "rich>=13.9.4",
    "tabulate>=0.9.0",
    "docling-core>=2.24.1",
    "docling>=2.34.0",
    "tokenizers<0.20,>=0.19",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
chroma = [
    "llama-index-vector-stores-chroma>=0.4.1",
]
huggingface = [
    "llama-index-embeddings-huggingface>=0.5.2",
]
bedrock = [
    "llama-index-embeddings-bedrock>=0.5.0",
    "llama-index-llms-bedrock-converse>=0.6.0",
]
openai = [
    "llama-index-llms-openai-like>=0.3.3",
    "openai>=1.69.0",
]
ollama = [
    "llama-index-llms-ollama>=0.5.2",
    "llama-index-embeddings-ollama>=0.5.0",
]
dev = [
    "isort>=6.0.0",
    "ruff>=0.9.7",
    "pre-commit>=4.1.0",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
flows = "python -m flows"

[tool.pdm.scripts.check-lint]
shell = """
    ruff format --check .
    isort --check .
    ruff check .
"""
help = "Run linting and formating checks."

[tool.pdm.scripts.reformat]
shell = """
    isort .
    ruff format .
"""
help = "Reformat the code using isort and ruff."

[tool.pdm.scripts.reqs]
shell = """
    PDM_USE_UV=0 pdm lock --strategy=inherit_metadata
    pdm export -G :all --format=requirements --without-hashes -o requirements.txt
"""
help = "Export all dependencies to requirements.txt file"

[tool.ruff]
line-length = 88
output-format = "grouped"


[tool.isort]
profile = "black"
line_length = 88
filter_files = true
force_alphabetical_sort_within_sections = true

