[project]
name = "SHRAG"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jose Marcos RF", email = "jose.marcos.rf@gmail.com"},
]
dependencies = [
    "boto3>=1.36.1",
    "invoke>=2.2.0",
    "loguru>=0.7.3",
    "llama-index>=0.12.37",
    "llama-index-vector-stores-mongodb>=0.4.1",
    "llama-index-postprocessor-flag-embedding-reranker>=0.3.0",
    "prefect>=3.2.7",
    "pymongo>=4.11.3",
    "pymupdf>=1.25.4",
    "redis>=5.2.1",
    "rich>=13.9.4",
    "tabulate>=0.9.0",
    "docling-core>=2.24.1",
    "docling>=2.34.0",
    "tokenizers>=0.22.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
chroma = [
    "llama-index-vector-stores-chroma>=0.4.1",
]
huggingface = [
    "llama-index-embeddings-huggingface>=0.5.2",
]
bedrock = [
    "llama-index-embeddings-bedrock>=0.5.0",
    "llama-index-llms-bedrock-converse>=0.6.0",
]
openai = [
    "llama-index-llms-openai-like>=0.3.3",
    "openai>=1.69.0",
]
ollama = [
    "llama-index-llms-ollama>=0.5.2",
    "llama-index-embeddings-ollama>=0.5.0",
]
dev = [
    "isort>=6.0.0",
    "ruff>=0.9.7",
    "pre-commit>=4.1.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
flows = "python -m flows"

# Testing scripts
tests = "python -m pytest tests -m \"not integration\" --cov=flows --maxfail=3 --disable-warnings -v"
integration-tests = "pytest tests/integration --cov=flows --maxfail=1 --disable-warnings -v"

# ECS Deployment scripts
ecs-docker = "./deployments/ecs/1_build_and_push_docker.sh"
ecs-setup = "./deployments/ecs/2_setup_infrastructure.sh"
ecs-pool = "./deployments/ecs/3_prefect_pool.sh"
ecs-flow-deploy = "./deployments/ecs/4_deploy_flow.sh"

[tool.pdm.scripts.check-lint]
shell = """
    ruff format --check .
    isort --check .
    ruff check .
"""
help = "Run linting and formating checks."

[tool.pdm.scripts.reformat]
shell = """
    ruff check --fix .
    isort .
    ruff format .
"""
help = "Reformat the code using isort and ruff."

[tool.pdm.scripts.reqs]
shell = """
    # PDM_USE_UV=0 pdm lock --strategy=inherit_metadata
    # pdm export -G :all --without dev --format=requirements --without-hashes -o requirements.txt
    if [ "$INCLUDE_GPU" != "true" ]; then
        echo "🧹 Removing NVIDIA CUDA dependencies for CPU build... (To include them: 'INCLUDE_GPU=true pdm reqs')"
        grep -v '^nvidia-' requirements.txt > tmp && mv tmp requirements.txt
        grep -v '^triton' requirements.txt > tmp && mv tmp requirements.txt
        echo "🔥 Converting to CPU-only PyTorch..."
        grep -v '^torch' requirements.txt > tmp && mv tmp requirements.txt
        echo '--extra-index-url https://download.pytorch.org/whl/cpu' >> requirements.txt
        echo 'torch==2.9.0+cpu' >> requirements.txt
    fi
"""
help = "Export all dependencies to requirements.txt file"

[tool.ruff]
line-length = 88
output-format = "grouped"


[tool.isort]
profile = "black"
line_length = 88
filter_files = true
force_alphabetical_sort_within_sections = true

